--- a/index.html
+++ b/index.html
@@ -1,48 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pack My Bags</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/ef54fc03a7.js" crossorigin="anonymous"></script>
+
+    <script
+      src="https://kit.fontawesome.com/ef54fc03a7.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Compressed CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
+      integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I="
+      crossorigin="anonymous"
+    />
     <!-- foundation-float.min.css: Compressed CSS with legacy Float Grid -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-float.min.css" integrity="sha256-4ldVyEvC86/kae2IBWw+eJrTiwNEbUUTmN0zkP4luL4=" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-float.min.css"
+      integrity="sha256-4ldVyEvC86/kae2IBWw+eJrTiwNEbUUTmN0zkP4luL4="
+      crossorigin="anonymous"
+    />
     <!-- foundation-prototype.min.css: Compressed CSS with prototyping classes -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-prototype.min.css" integrity="sha256-BiKflOunI0SIxlTOOUCQ0HgwXrRrRwBkIYppEllPIok=" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-prototype.min.css"
+      integrity="sha256-BiKflOunI0SIxlTOOUCQ0HgwXrRrRwBkIYppEllPIok="
+      crossorigin="anonymous"
+    />
     <!-- foundation-rtl.min.css: Compressed CSS with right-to-left reading direction -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-rtl.min.css" integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE=" crossorigin="anonymous">
-</head>
-<body>
-    <header>Pack My Bags</header>
-<main>
-    <div id="imageLocationWeather" class="imageLocationWeather">
-
-    </div>
-    
-    <div id="selections" class="selections">
-        <div id="location" class="selection">
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-rtl.min.css"
+      integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div>
+        <div class="columns" id="header"><img src="https://files.slack.com/files-pri/TUSFSNPGQ-F015ZQ4D5GD/screen_shot_2020-06-25_at_7.39.00_pm.png"></span>
         </div>
-        <div id="dates" class="dates">
+      </div>
+    </header>
+    <main>
+      <div class="wrapper">
+        <div class="innerWrapper" id="inputsDate">
+          <div id="selections" class="selections">
+            <div id="location" class="selection"></div>
 
+            <div id="type" class="type"></div>
+            <div id="dates" class="dates"></div>
+          </div>
         </div>
-        <div id="type" class="type">
-
+        <div clas="innerWrapper" id="weatherImage">
+          <div id="imageLocationWeather" class="imageLocationWeather"></div>
         </div>
-    </div>
-    <div id="itemsList" class="itemsList">
+        <div class="innerWrapper" id="lists">
+          <div id="itemsList" class="itemsList"></div>
+        </div>
 
-    </div>
-    <div id="suitcase" class="suitcase">
+        <div id="suitcase" class="suitcase"></div>
+      </div>
+      <div>
+        <footer id="footer">Produced by Alvaro, Juwon & Monique</footer>
+      </div>
+    </main>
 
-    </div>
-</main>
-<footer>Produced by Alvaro, Juwon & Monique</footer>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<!-- Compressed JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Compressed JavaScript -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
+      integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o="
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
