--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
   <body>
     <header>
       <div>
-        <div class="columns" id="header"><img src="https://files.slack.com/files-pri/TUSFSNPGQ-F015ZQ4D5GD/screen_shot_2020-06-25_at_7.39.00_pm.png"></span>
-        </div>
+        <div class="columns" id="header"><img src="img/Screen Shot 2020-06-25 at 7.59.55 pm.png">
       </div>
     </header>
     <main>
