--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
                 </div>
                 <div class="grid-x grid-padding-x">
                     <div class="medium-4 cell">
-                        <label>Dates
-                            <input type="date" id="inputDates" class="span2" placeholder="01/01/2020">
+                        <label>Start Dates
+                            <input type="date" id="inputStartDates" class="span2" placeholder="01/01/2020">
+                        </label>
+                    </div>
+                    <div class="medium-4 cell">
+                        <label>End Dates
+                            <input type="date" id="inputEndDates" class="span2" placeholder="01/01/2020">
                         </label>
                     </div>
                 </div>
@@ -80,6 +85,7 @@
       integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
