--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <div class="grid-container">
                 <div class="grid-x grid-padding-x">
                     <div class="medium-4 cell">
-                        <label>Location
+                        <label>Destination
                             <input type="text" id="inputLocation" placeholder="Sydney">
                         </label>
                     </div>
                 </div>
                 <div class="grid-x grid-padding-x">
                     <div class="medium-4 cell">
-                        <label>Start Dates
+                        <label>Start Date
                             <input type="date" id="inputStartDates" class="span2" placeholder="01/01/2020">
                         </label>
                     </div>
                     <div class="medium-4 cell">
-                        <label>End Dates
+                        <label>End Date
                             <input type="date" id="inputEndDates" class="span2" placeholder="01/01/2020">
                         </label>
                     </div>
