--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
                 <div class="large-12 cell">
                     <label>Type of the travel
                         <select>
-                          <option value="default">Where do you want to go?</option>
+                          <option value="default">What type of trip are you taking?</option>
                           <option value="beach">Beach</option>
                           <option value="city">City</option>
                           <option value="country">Country</option>
                         </select>
-                      </label>
-                      <div class="grid-x grid-padding-x">
-                        <input type="submit" class="button " id="submitBtn">
-                    </div>
+                    </label>
+                    <input type="submit" class="button large-12 cell" id="submitBtn">   
                 </div>
                 <!-- <div class="grid-x grid-padding-x">
                     <input type="submit" class="button" id="submitBtn">
