--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 
     <script src="https://kit.fontawesome.com/ef54fc03a7.js" crossorigin="anonymous"></script>
     <!-- Compressed CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
+        integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous" />
     <!-- foundation-float.min.css: Compressed CSS with legacy Float Grid -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-float.min.css" integrity="sha256-4ldVyEvC86/kae2IBWw+eJrTiwNEbUUTmN0zkP4luL4=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-float.min.css"
+        integrity="sha256-4ldVyEvC86/kae2IBWw+eJrTiwNEbUUTmN0zkP4luL4=" crossorigin="anonymous" />
     <!-- foundation-prototype.min.css: Compressed CSS with prototyping classes -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-prototype.min.css" integrity="sha256-BiKflOunI0SIxlTOOUCQ0HgwXrRrRwBkIYppEllPIok=" crossorigin="anonymous" />
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-prototype.min.css"
+        integrity="sha256-BiKflOunI0SIxlTOOUCQ0HgwXrRrRwBkIYppEllPIok=" crossorigin="anonymous" />
     <!-- foundation-rtl.min.css: Compressed CSS with right-to-left reading direction -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-rtl.min.css" integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-rtl.min.css"
+        integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -45,48 +50,56 @@
                             <input type="date" id="inputEndDates" class="span2" placeholder="01/01/2020">
                         </label>
                     </div>
-                </div>   
-               <div class="grid-x grid-padding-x">
-                <div class="large-12 cell">
-                    <label>Type of the travel
-                        <select>
-                          <option value="default">What type of trip are you taking?</option>
-                          <option value="beach">Beach</option>
-                          <option value="city">City</option>
-                          <option value="country">Country</option>
-                        </select>
-                    </label>
-                    <input type="submit" class="button large-12 cell" id="submitBtn">   
                 </div>
-                <!-- <div class="grid-x grid-padding-x">
+                <div class="grid-x grid-padding-x">
+                    <div class="large-12 cell">
+                        <label>Type of the travel
+                            <select>
+                                <option value="default">What type of trip are you taking?</option>
+                                <option value="beach">Beach</option>
+                                <option value="city">City</option>
+                                <option value="country">Country</option>
+                            </select>
+                        </label>
+                        <input type="submit" class="button large-12 cell" id="submitBtn">
+                    </div>
+                    <!-- <div class="grid-x grid-padding-x">
                     <input type="submit" class="button" id="submitBtn">
                 </div> -->
-            </div>
+                </div>
         </form>
 
         <div clas="innerWrapper" id="weatherImage">
-          <div id="imageLocationWeather" class="imageLocationWeather"></div>
+            <div id="imageLocationWeather" class="imageLocationWeather"></div>
         </div>
 
         <div class="innerWrapper" id="lists">
-          <div id="itemsList" class="itemsList"></div>
+            <div id="itemsList" class="itemsList"></div>
         </div>
 
         <div id="suitcase" class="suitcase"></div>
+        <!-- Trigger/Open The Modal -->
+        <button id="myBtn">Open Modal</button>
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content" id="modalDiv">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+
+        </div>
     </main>
     <footer id="footer">Produced by Alvaro, Juwon & Monique</footer>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Compressed JavaScript -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
-      integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
+        integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
