minor css and html changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div id="suitcase" class="suitcase"></div>
         <!-- Trigger/Open The Modal -->
-        <button id="myBtn">Open Modal</button>
+        <button id="myBtn">Trip Summary</button>
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -87,7 +87,7 @@
             <!-- Modal content -->
             <div class="modal-content" id="modalDiv">
                 <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
+                <button>Some text in the Modal..</button>
             </div>
 
         </div>
