add classes on item list, and show info inside modal

--- a/index.html
+++ b/index.html
@@ -82,15 +82,14 @@
 
             <!-- Modal content -->
             <div class="modal-content" id="modalDiv">
+                <span class="close">&times;</span>
                 <div class="trip-Info">
                     <p class="Destination"></p>
                     <p class="Dates"></p>
                     <p class="type"></p>
                 </div>
                 <div class="backpack">
-                    <ul class="backpack-list">
-
-                    </ul>
+                    <ul class="backpack-list"></ul>
                 </div>
             </div>
 
