more style added with error box and click to refresh function on javaScript

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                         </label>
                         <input type="submit" class="button large-12 cell" id="submitBtn">
                     </div>
+                    <div class="hidden" id="errorBox">
+                        WARNING ! <br>
+                        Select an end date 8 days from today.
+                        click to continue .. 
+                    </div>
                 </div>
             </div>
         </form>
