update css to center list and show all info on modal

--- a/index.html
+++ b/index.html
@@ -61,18 +61,13 @@
                 </div>
             </div>
         </form>
-
-        <div clas="innerWrapper" id="weatherImage">
-            <div id="imageLocationWeather" class="imageLocationWeather"></div>
+        <div class="list-container">
+            <div class="grid-container">
+                <div class="innerWrapper" id="lists">
+                    <div id="itemsList" class="itemsList"></div>
+                </div>
+            </div>
         </div>
-
-        <div class="innerWrapper" id="lists">
-            <div id="itemsList" class="itemsList"></div>
-        </div>
-
-        <div id="suitcase" class="suitcase"></div>
-        <!-- Trigger/Open The Modal -->
-
         <button class="hide" id="myBtn">Pack My Bags <i class="fas fa-suitcase" style="margin-left: 18px"></i></button>
 
 
