--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
                         </label>
                         <input type="submit" class="button large-12 cell" id="submitBtn">
                     </div>
-                    <div class="hidden" id="errorBox">
+                    <div class="large-12 cell">
+                        <div class="hidden" id="errorBox">
                         WARNING ! <br>
                         Select an end date 8 days from today.
                         click to continue .. 
+                        </div>
                     </div>
+                    
                 </div>
             </div>
         </form>
