button added on modal

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <div class="backpack">
                     <ul class="backpack-list"></ul>
                 </div>
+                <button id="shopBtn"><a href="https://www.amazon.com.au/">click to shop!</a></button>
             </div>
 
         </div>
