--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="large-12 cell">
                         <div class="hidden" id="errorBox">
-                            WARNING ! <br> Select an end date 8 days from today. click to continue ..
+                            WARNING ! <br> End date must be no more than 8 days from today's date. <br> Click to continue.
                         </div>
                     </div>
 
